--- a/details.css
+++ b/details.css
@@ -11,10 +11,10 @@
     border-radius: 15px;
   	padding-left: 50px;
   	padding-right: 50px;
-  	padding-bottom: 500px;
-  	width: 1500px;
+  	padding-bottom: 600px;
+  	width: 1000px;
   	height: 200px;
-  	max-width: 1000px;
+  	max-width: 800px;
   margin: auto;
   
 }
@@ -22,36 +22,13 @@
 
 
 body{
-background-image: url(https://www.xmple.com/wallpaper/linear-blue-purple-gradient-highlight-1920x1080-c2-00008b-ff00ff-l-33-a-165-f-21.svg);
+background-image: url(https://github.com/ayushsatyam146/sihpics/blob/master/back.jpeg?raw=true);
+background-repeat: none;
 }
 
 
 
 
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: #333;
-}
-
-li {
-  float: left;
-}
-
-li a {
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-
-
-li a:hover {
-  background-color: #111;
-}
 
 
 .logout{
@@ -59,8 +36,8 @@ li a:hover {
 }
 
 .map{
-  width: 300px;
-  height: 200px;
+  width: 600px;
+  height: 300px;
 }
 
 .input100 {
@@ -75,4 +52,40 @@ li a:hover {
     border-radius: 10px;
     padding-left:10px;
     
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #d6c4b0;
+  font-size: 20px;
+  font-family: 'Poppins', sans-serif;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: black;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+
+li a:hover {
+  background-color: #c6af9d;
+}
+
+.logout{
+  float: right;
+}
+
+.headpic{
+  width: 1263px;
+  background-color: #d6c4b0;
 }
