--- a/success.css
+++ b/success.css
@@ -33,7 +33,8 @@
 }
 
 body{
-background-image: url(https://www.xmple.com/wallpaper/linear-blue-purple-gradient-highlight-1920x1080-c2-00008b-ff00ff-l-33-a-165-f-21.svg);
+background-image: url(https://github.com/ayushsatyam146/sihpics/blob/master/back.jpeg?raw=true);
+background-repeat: none;
 }
 
 input {
@@ -46,12 +47,20 @@ input {
 	text-align: left;
 }
 
+
+.logout{
+  float: right;
+}
+
+
 ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: #333;
+  background-color: #d6c4b0;
+  font-size: 20px;
+  font-family: 'Poppins', sans-serif;
 }
 
 li {
@@ -60,7 +69,7 @@ li {
 
 li a {
   display: block;
-  color: white;
+  color: black;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
@@ -68,9 +77,14 @@ li a {
 
 
 li a:hover {
-  background-color: #111;
+  background-color: #c6af9d;
 }
 
 .logout{
   float: right;
+}
+
+.headpic{
+  width: 1280px;
+  background-color: #d6c4b0;
 }
